[gd_scene load_steps=3 format=3 uid="uid://m16a755a0ytk"]

[ext_resource type="Script" uid="uid://by8mqejh3gqp8" path="res://scripts/options_menu.gd" id="1_ijpji"]
[ext_resource type="FontFile" uid="uid://kvmp4u6ofv88" path="res://assets/fonts/Kenney Mini Square.ttf" id="2_hm4m4"]

[node name="Options Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijpji")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Sound" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.980392, 0.870588, 1)
theme_override_fonts/font = ExtResource("2_hm4m4")
text = "Sound"

[node name="Controls" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.980392, 0.870588, 1)
theme_override_fonts/font = ExtResource("2_hm4m4")
text = "Controls"

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.980392, 0.870588, 1)
theme_override_fonts/font = ExtResource("2_hm4m4")
text = "Back"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Sound" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Controls" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
